--- a/etchSketch.html
+++ b/etchSketch.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+</html>
 	<head>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	</head>
