--- a/etchSketch.html
+++ b/etchSketch.html
@@ -2,6 +2,13 @@
 <html>
 	<head>
 		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+		<script src="etchSketch.js"></script>
+		<link rel="stylesheet" href="etchSketch.css"></link>
+			
+		<!-- jQuery UI -->
+		<link rel="stylesheet" href="jquery-ui/jquery-ui.min.css"></link>
+		<script src="jquery-ui/external/jquery/jquery.js"></script>
+		<script src="jquery-ui/jquery-ui.min.js"></script>
 	</head>
 	<body>
 		<table cellspacing="0" cellpadding="0"></table>
